--- a/emails/beefree-fkj7ovw5cu9.html
+++ b/emails/beefree-fkj7ovw5cu9.html
@@ -177,7 +177,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#ff3a3a;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;line-height:1.2;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 1.2; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #ff3a3a; mso-line-height-alt: 14px;">
-<p style="font-size: 14px; line-height: 1.2; text-align: left; word-break: break-word; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; mso-line-height-alt: 17px; margin: 0;"><span style="">I’m Micah, and I’ve started a blog.</span></p>
+<p style="font-size: 14px; line-height: 1.2; text-align: left; word-break: break-word; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; mso-line-height-alt: 17px; margin: 0;"><span style="color: #ff3a3a;">I’m Micah, and I’ve started a blog.</span></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
