--- a/composr/index.html
+++ b/composr/index.html
@@ -8,6 +8,6 @@
   <body>
     <main id = "mainpage"></main>
     <script src = "mostrecent.js"></script>
-    <script src="script.js"></script>
+    <script src="demo.js"></script>
   </body>
 </html>
