--- a/composr/index.html
+++ b/composr/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main id = "mainpage"></main>
-    <script src = "mostrecent.js"></script>
+    <script src = "https://cdn.micahlindley.com/composr/mostrecent.js"></script>
     <script src="demo.js"></script>
   </body>
 </html>
