Make error links target a new tab/window

--- a/error-screens/maintain.html
+++ b/error-screens/maintain.html
@@ -14,9 +14,9 @@
     <img src="modchat-v2.png" alt="Modchat V2">
     <br><br>
     <h1>We're working on the next generation of Modchat.</h1><br><br>
-    <a href="https://scratch.mit.edu/users/-Archon-#comments">Contact</a>
+    <a href="https://scratch.mit.edu/users/-Archon-#comments" target="_blank">Contact</a>
   </div><br>
-  <a href="https://github.com/micahlt/modchat" class="github">
+  <a href="https://github.com/micahlt/modchat" class="github" target="_blank">
     <img src="github-logo.svg" alt="GitHub">
   </a>
 </body>
