Renamed some things and added a new error screen

--- a/error-screens/err.html
+++ b/error-screens/err.html
@@ -4,16 +4,16 @@
 <head>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <meta charset="utf-8">
-  <title>Modchat is offline</title>
+  <title>Modchat - Error</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="main">
-    <img src="modchat-v2.png" alt="Modchat V2">
+    <img src="modchat-error.png" alt="Modchat Error!">
     <br><br>
-    <h1>We're working on the next generation of Modchat.</h1><br><br>
+    <h1>Looks like we're having some trouble with the server!</h1><br><br>
     <a href="https://scratch.mit.edu/users/-Archon-#comments" target="_blank">Contact</a>
   </div><br>
   <a href="https://github.com/micahlt/modchat" class="github" target="_blank">
