Change modchat logo

--- a/error-screens/maintain.html
+++ b/error-screens/maintain.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="main">
-    <img src="modchat-v2.png" alt="Modchat V2">
+    <img src="wordmark-black.png" alt="Modchat">
     <br><br>
     <h1>We're working on the next generation of Modchat.</h1><br><br>
     <a href="https://scratch.mit.edu/users/-Archon-#comments" target="_blank">Contact</a>
