Confirmed Modchat shutdown

--- a/error-screens/maintain.html
+++ b/error-screens/maintain.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <meta charset="utf-8">
-  <title>Modchat is offline</title>
+  <title>Depreciation notice</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
   <div class="main">
     <img src="wordmark-black.png" alt="Modchat">
     <br><br>
-    <h1>We're working on the next generation of Modchat.</h1><br><br>
+    <h1>Modchat shut down on October 19, 2020.</h1><br><br>
     <a href="https://scratch.mit.edu/users/-Archon-#comments" target="_blank">Contact</a>
   </div><br>
   <a href="https://github.com/micahlt/modchat" class="github" target="_blank">
