Moved modchat host

--- a/error-screens/maintain.html
+++ b/error-screens/maintain.html
@@ -13,10 +13,10 @@
   <div class="main">
     <img src="wordmark-black.png" alt="Modchat">
     <br><br>
-    <h1>Modchat shut down on October 19, 2020.</h1><br><br>
-    <a href="https://scratch.mit.edu/users/-Archon-#comments" target="_blank">Contact</a>
+    <h1>Modchat has moved to a new host!</h1><br><br>
+    <a href="https:/modchat.micahlindley.com" target="_blank">Go to Modchat</a>
   </div><br>
-  <a href="https://github.com/micahlt/modchat" class="github" target="_blank">
+  <a href="https://github.com/micahlt/modchat" class="github" target="_blank" title="source code (FOSS with ♥)">
     <img src="github-logo.svg" alt="GitHub">
   </a>
 </body>
