--- a/error-screens/maintain.html
+++ b/error-screens/maintain.html
@@ -14,7 +14,7 @@
     <img src="wordmark-black.png" alt="Modchat">
     <br><br>
     <h1>Modchat has moved to a new host!</h1><br><br>
-    <a href="https://modchat.micahlindley.com" target="_self">Go to Modchat</a>
+    <a href="https://modchat.micahlindley.com" target="_top">Go to Modchat</a>
   </div><br>
   <a href="https://github.com/micahlt/modchat" class="github" target="_blank" title="source code (FOSS with ♥)">
     <img src="github-logo.svg" alt="GitHub">
